maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: not found: value Xo
var a:Int=Xo+Yo
          ^